# SiriBot

./: .gitignore  BUG_FIXES.md  CHANGELOG.md  CLAUDE.md  LICENSE  MARKETING_PLAN.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  agents.md  main.py  orchestrator.py  pyproject.toml  requirements.txt  siribot_gui.py
.github/: RELEASE_GUIDE.md
.github/workflows/: release.yml  test.yml
agents/: __init__.py  conversation_agent.py  memory_agent.py  reasoning_agent.py  tool_agent.py
cli/: __init__.py  interface.py  main.py
config/: config.example.yaml
core/: __init__.py  config.py  logger.py  model_manager.py
macos/SiriBot/: project.yml
macos/SiriBot/SiriBot.xcodeproj/: project.pbxproj
macos/SiriBot/Sources/: AppDelegate.swift  SetupView.swift  StudioViews.swift
macos/SiriBot/Supporting/: Info.plist  SiriBot.entitlements
setup/: build.sh  build_dmg.sh  build_linux.py  build_studio_dmg.sh  build_windows.py  deploy.sh  quickstart.py
shared/: __init__.py
shared/Models/: Message.swift  StudioModels.swift  ViewModels.swift
shared/Services/: AIPService.swift  BackgroundService.swift  CalendarIntegration.py  DesktopControlService.swift  GitHubService.swift  HandoffService.swift  LogService.swift  MemoryService.swift  NotesIntegration.py  PersonalModelManager.py  PluginMarketplace.py  RemindersIntegration.py  ShortcutService.swift  SkillsService.swift  SyncService.py  VoiceService.swift  WorkflowEngine.py  __init__.py  integrations.json
shortcuts/: URLHandler.swift  apple_shortcuts.md  shortcuts_config.json
siribot/: __init__.py  __main__.py
studio/SiriBotStudio/: project.yml
studio/SiriBotStudio/Sources/: StudioAppDelegate.swift  StudioViews.swift  main.swift
tools/: __init__.py  registry.py
tools/basic/: __init__.py  app_tool.py  file_tool.py  shell_tool.py
voice/: __init__.py  input.py  output.py
(+1 files in other folders)
